[package]
name = "rs-multiprocess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
sysinfo = "0.30.12"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = "2.3.0"
